{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 496,
  "lineage": "7ff54ead-de45-5ca0-6d91-8fec29d5a6a2",
  "resources": [
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e857ac13431c4cd9",
            "arn": "arn:aws:ec2:us-west-2:920372995171:elastic-ip/eipalloc-0e857ac13431c4cd9",
            "domain": "vpc",
            "id": "eipalloc-0e857ac13431c4cd9",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-84-117-67.us-west-2.compute.amazonaws.com",
            "public_ip": "35.84.117.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "Dev"
            },
            "tags_all": {
              "Env": "Dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:internet-gateway/igw-0b627ebaee168056e",
            "id": "igw-0b627ebaee168056e",
            "owner_id": "920372995171",
            "tags": {
              "Env": "Dev",
              "Name": "myvpc1_gateway_name"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "myvpc1_gateway_name"
            },
            "vpc_id": "vpc-03a5c0feae9334ec1"
          },
          "dependencies": [
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e857ac13431c4cd9",
            "association_id": "eipassoc-0d6a9ebe54aa46964",
            "connectivity_type": "public",
            "id": "nat-0786b7d4b8e252c7c",
            "network_interface_id": "eni-0e0ec588472e9aff3",
            "private_ip": "10.0.2.80",
            "public_ip": "35.84.117.67",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0deff8b8b72073d21",
            "tags": {
              "Env": "Dev",
              "Name": "my-Nat-gateway"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "my-Nat-gateway"
            }
          },
          "dependencies": [
            "module.myvpc1.aws_eip.nat_gateway_eip",
            "module.myvpc1.aws_internet_gateway.gateway",
            "module.myvpc1.aws_subnet.my-public-subnet",
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-private-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:route-table/rtb-0e17ef7d7e252b5e2",
            "id": "rtb-0e17ef7d7e252b5e2",
            "owner_id": "920372995171",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0786b7d4b8e252c7c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Dev",
              "Name": "myvpc1_routetable_private"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "myvpc1_routetable_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a5c0feae9334ec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc1.aws_eip.nat_gateway_eip",
            "module.myvpc1.aws_internet_gateway.gateway",
            "module.myvpc1.aws_nat_gateway.mynat-gateway",
            "module.myvpc1.aws_subnet.my-public-subnet",
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-public-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:route-table/rtb-00e27bea40b5dfeba",
            "id": "rtb-00e27bea40b5dfeba",
            "owner_id": "920372995171",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b627ebaee168056e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Dev",
              "Name": "myvpc1_routetable"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "myvpc1_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a5c0feae9334ec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc1.aws_internet_gateway.gateway",
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e614313e84b46353",
            "route_table_id": "rtb-0e17ef7d7e252b5e2",
            "subnet_id": "subnet-0de74852b1e2602f5"
          },
          "dependencies": [
            "module.myvpc1.aws_eip.nat_gateway_eip",
            "module.myvpc1.aws_internet_gateway.gateway",
            "module.myvpc1.aws_nat_gateway.mynat-gateway",
            "module.myvpc1.aws_route_table.my-private-routetable",
            "module.myvpc1.aws_subnet.my-private-subnet",
            "module.myvpc1.aws_subnet.my-public-subnet",
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3feefe2b60e1b23",
            "route_table_id": "rtb-0e17ef7d7e252b5e2",
            "subnet_id": "subnet-0b1f19e0cb141aec7"
          },
          "dependencies": [
            "module.myvpc1.aws_eip.nat_gateway_eip",
            "module.myvpc1.aws_internet_gateway.gateway",
            "module.myvpc1.aws_nat_gateway.mynat-gateway",
            "module.myvpc1.aws_route_table.my-private-routetable",
            "module.myvpc1.aws_subnet.my-private-subnet",
            "module.myvpc1.aws_subnet.my-public-subnet",
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a992a537d851c2a1",
            "route_table_id": "rtb-0e17ef7d7e252b5e2",
            "subnet_id": "subnet-0b1b6ad869503da7d"
          },
          "dependencies": [
            "module.myvpc1.aws_eip.nat_gateway_eip",
            "module.myvpc1.aws_internet_gateway.gateway",
            "module.myvpc1.aws_nat_gateway.mynat-gateway",
            "module.myvpc1.aws_route_table.my-private-routetable",
            "module.myvpc1.aws_subnet.my-private-subnet",
            "module.myvpc1.aws_subnet.my-public-subnet",
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b1ccda07116e28a",
            "route_table_id": "rtb-00e27bea40b5dfeba",
            "subnet_id": "subnet-0deff8b8b72073d21"
          },
          "dependencies": [
            "module.myvpc1.aws_internet_gateway.gateway",
            "module.myvpc1.aws_route_table.my-public-routetable",
            "module.myvpc1.aws_subnet.my-public-subnet",
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea9f8c33c3a15ee5",
            "route_table_id": "rtb-00e27bea40b5dfeba",
            "subnet_id": "subnet-02518ed9f597e1c91"
          },
          "dependencies": [
            "module.myvpc1.aws_internet_gateway.gateway",
            "module.myvpc1.aws_route_table.my-public-routetable",
            "module.myvpc1.aws_subnet.my-public-subnet",
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:subnet/subnet-0de74852b1e2602f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de74852b1e2602f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "920372995171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "private_subnet1"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "private_subnet1"
            },
            "vpc_id": "vpc-03a5c0feae9334ec1"
          },
          "dependencies": [
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:subnet/subnet-0b1f19e0cb141aec7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1f19e0cb141aec7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "920372995171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "private_subnet2"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "private_subnet2"
            },
            "vpc_id": "vpc-03a5c0feae9334ec1"
          },
          "dependencies": [
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:subnet/subnet-0b1b6ad869503da7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1b6ad869503da7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "920372995171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "private_subnet23"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "private_subnet23"
            },
            "vpc_id": "vpc-03a5c0feae9334ec1"
          },
          "dependencies": [
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:subnet/subnet-0deff8b8b72073d21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0deff8b8b72073d21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "920372995171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "public_subnet1"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "public_subnet1"
            },
            "vpc_id": "vpc-03a5c0feae9334ec1"
          },
          "dependencies": [
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:subnet/subnet-02518ed9f597e1c91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02518ed9f597e1c91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "920372995171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Dev",
              "Name": "public_subnet2"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "public_subnet2"
            },
            "vpc_id": "vpc-03a5c0feae9334ec1"
          },
          "dependencies": [
            "module.myvpc1.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:920372995171:vpc/vpc-03a5c0feae9334ec1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d50bfa00de3b78fa",
            "default_route_table_id": "rtb-0c193ffa6b6836893",
            "default_security_group_id": "sg-071e86306f60d22d7",
            "dhcp_options_id": "dopt-0e750eb475cedc74a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03a5c0feae9334ec1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c193ffa6b6836893",
            "owner_id": "920372995171",
            "tags": {
              "Env": "Dev",
              "Name": "myvpc-1"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "myvpc-1"
            }
          }
        }
      ]
    }
  ]
}